--- a/csstravel.css
+++ b/csstravel.css
@@ -64,3 +64,39 @@ header {
 .menu-header a:hover {
     background-color: antiquewhite;
 }
+
+.top-wrapper {
+  padding: 10px 0 100px 0;
+  background-image: url(https://i.pinimg.com/originals/4c/39/b3/4c39b3535a6cae243d1a318eb5600a50.jpg);
+  color: white;
+  text-align: center;
+  }
+  
+  .top-wrapper h1 {
+  opacity: 0.7;
+  font-size: 45px;
+  margin-bottom: 10px;
+  letter-spacing:5px;
+  }
+  
+  .top-wrapper p {
+  opacity: 0.7;
+  margin-bottom: 3px;
+  }
+  
+  .btn-wrapper {
+  margin: 20px 0;
+  }
+  
+  .signup {
+  background-color: #239b76;
+  }
+  
+  .btn {
+  padding: 12px 24px;
+  color: white;
+  display: inline-block;
+  opacity: 0.8;
+  border-radius: 4px;
+  }
+  
