--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 .container {
     width: 1170px;
-    padding: 0 15px;
+    padding: 0 ;
     margin: 0 auto;
   }
 
@@ -35,7 +35,7 @@ header {
   }
   
 .header-right a {
-    line-height: 65px;
+    line-height: 50px;
     padding: 0 25px;
     color: rgb(197, 21, 21);
     display: block;
@@ -54,7 +54,7 @@ header {
 .menu-header a {
     padding: 25px;
     display: block;
-    font-size: 20px;
+    font-size: 13px;
     color: rgb(197, 21, 21);
     text-transform: uppercase;
     transition: all 0.5s ease;
@@ -65,12 +65,23 @@ header {
     background-color: antiquewhite;
 }
 
+
+.menu-icon{
+  color: rgba(247, 245, 240, 0.9);
+  float: right;
+  padding: 12px 12px;
+  display:none;
+}
+
 .top-wrapper {
-  padding: 10px 0 100px 0;
+  padding: 100px 0 30px 0;
   background-image: url(https://i.pinimg.com/originals/4c/39/b3/4c39b3535a6cae243d1a318eb5600a50.jpg);
-  color: white;
+  background-size:cover;
+  background-position:center;
+  background-repeat:no-repeat;
+  color: #fff;
   text-align: center;
-  }
+}
   
   .top-wrapper h1 {
   opacity: 0.7;
@@ -101,7 +112,7 @@ header {
   }
   .gambar {
     width: 100%; 
-    display: grid; 
+    display: inline-block; 
     grid-template-columns: 1fr 1fr 1fr; 
     margin:auto;
   }
@@ -111,7 +122,8 @@ header {
 
 .foto {
   border: 1px solid black; 
-  margin:10px; text-align: center; 
+  margin:10px; text-align: center;
+  padding: 15px 15px 15px 15px; 
 }
 
 .foto a{
@@ -159,8 +171,8 @@ header {
 
 .img-fluid {
   border-radius: 2%;
-  width: 50%;
-  height: 50%;
+  width: 40%;
+  height: 40%;
 }
 
 .workingspace h3 span {
@@ -172,19 +184,27 @@ header {
   color: #ACACAC;
   font-weight: 200;
   margin: 30px 0;
-}
-.footer {
-  text-align: center; 
-  margin: 20px; 
-  color: white; 
-  background: green; 
-  height: 70px;}
-
-.footer p{
-  padding-top:25px;
+  
 }
 
-.footer a{
-  text-decoration: none; 
-  color: white; 
+.col-lg-6 h3{
+  font-size: 30px;
+}
+
+.row {
+  text-align: center;
+}
+
+footer{
+  font-family: 'Libre Franklin', sans-serif;
+  background-color: rgba(247, 245, 240, 0.9);
+  color: white;
+  height: 60PX;
+
+}
+
+footer p {
+  text-align: center;
+  color: black;
+  padding-top: 20px;
 }
